Refactor ColorAPI and update patterns for v0.4.1
Major refactor of ColorAPI for improved RGB, gradient, and rainbow support, including better legacy compatibility and logging. Updated color pattern classes to use new ColorAPI methods and improved regex handling. Upgraded project to Java 21, updated dependencies, and switched to Paper API. Removed old shaded jar, added new v0.4.1 jars, and cleaned up pom.xml for modern build configuration.